fix : overflow on main element

--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ main {
   grid-template-rows: repeat(4,100%);
   justify-items: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 h1,h2 {
@@ -62,6 +63,7 @@ p {
 }
 
 header {
+  width: 100%;
   height: 60px;
   max-width: 800px;
   margin: 0 auto;
@@ -158,9 +160,9 @@ footer {
 #planet-intro {
   width: 20vw;
   height: 20vw;
-  min-width: 320px;
-  min-height: 320px;
-  margin: 0 0 0 5vw;
+  min-width: 300px;
+  min-height: 300px;
+  /* margin: 0 0 0 5vw; */
   grid-column: 2/-2;
   grid-row: 2/3;
   border-radius: 50%;
